force-app/main/default/objects/iManage_Workspace__c/iManage_Workspace__c.object-meta.xml
<CustomObject>
    <label>iManage Workspace</label>
    <nameField>
        <displayFormat>IMW-{000000}</displayFormat>
        <label>iManage Workspace Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iManage Workspace</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>