force-app/main/default/objects/iManage_Workspace__c/fields/author__c.field-meta.xml
<CustomField>
    <fullName>author__c</fullName>
    <label>author</label>
    <length>50</length>
    <type>Text</type>
</CustomField>