force-app/main/default/objects/iManage_Workspace__c/fields/class__c.field-meta.xml
<CustomField>
    <fullName>class__c</fullName>
    <label>class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>