force-app/main/default/objects/iManage_Workspace__c/fields/content_type__c.field-meta.xml
<CustomField>
    <fullName>content_type__c</fullName>
    <label>content_type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>