force-app/main/default/objects/iManage_Workspace__c/fields/create_date__c.field-meta.xml
<CustomField>
    <fullName>create_date__c</fullName>
    <label>create_date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>