force-app/main/default/objects/iManage_Workspace__c/fields/create_profile_date__c.field-meta.xml
<CustomField>
    <fullName>create_profile_date__c</fullName>
    <label>create_profile_date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>