force-app/main/default/objects/iManage_Workspace__c/fields/custom10__c.field-meta.xml
<CustomField>
    <fullName>custom10__c</fullName>
    <label>custom10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>