force-app/main/default/objects/iManage_Workspace__c/fields/custom10_description__c.field-meta.xml
<CustomField>
    <fullName>custom10_description__c</fullName>
    <label>custom10_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>