force-app/main/default/objects/iManage_Workspace__c/fields/custom1__c.field-meta.xml
<CustomField>
    <fullName>custom1__c</fullName>
    <label>custom1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>