force-app/main/default/objects/iManage_Workspace__c/fields/custom1_description__c.field-meta.xml
<CustomField>
    <fullName>custom1_description__c</fullName>
    <label>custom1_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>