force-app/main/default/objects/iManage_Workspace__c/fields/custom2__c.field-meta.xml
<CustomField>
    <fullName>custom2__c</fullName>
    <label>custom2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>