force-app/main/default/objects/iManage_Workspace__c/fields/custom2_description__c.field-meta.xml
<CustomField>
    <fullName>custom2_description__c</fullName>
    <label>custom2_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>