force-app/main/default/objects/iManage_Workspace__c/fields/default_security__c.field-meta.xml
<CustomField>
    <fullName>default_security__c</fullName>
    <label>default_security</label>
    <length>50</length>
    <type>Text</type>
</CustomField>