force-app/main/default/objects/iManage_Workspace__c/fields/has_subfolders__c.field-meta.xml
<CustomField>
    <fullName>has_subfolders__c</fullName>
    <label>has_subfolders</label>
    <length>10</length>
    <type>Text</type>
</CustomField>