force-app/main/default/objects/iManage_Workspace__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>