force-app/main/default/objects/iManage_Workspace__c/fields/indexable__c.field-meta.xml
<CustomField>
    <fullName>indexable__c</fullName>
    <label>indexable</label>
    <length>50</length>
    <type>Text</type>
</CustomField>