force-app/main/default/objects/iManage_Workspace__c/fields/is_declared__c.field-meta.xml
<CustomField>
    <fullName>is_declared__c</fullName>
    <label>is_declared</label>
    <length>10</length>
    <type>Text</type>
</CustomField>