force-app/main/default/objects/iManage_Workspace__c/fields/is_external__c.field-meta.xml
<CustomField>
    <fullName>is_external__c</fullName>
    <label>is_external</label>
    <length>10</length>
    <type>Text</type>
</CustomField>