force-app/main/default/objects/iManage_Workspace__c/fields/is_hidden__c.field-meta.xml
<CustomField>
    <fullName>is_hidden__c</fullName>
    <label>is_hidden</label>
    <length>10</length>
    <type>Text</type>
</CustomField>