force-app/main/default/objects/iManage_Workspace__c/fields/is_hipaa__c.field-meta.xml
<CustomField>
    <fullName>is_hipaa__c</fullName>
    <label>is_hipaa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>