force-app/main/default/objects/iManage_Workspace__c/fields/is_in_use__c.field-meta.xml
<CustomField>
    <fullName>is_in_use__c</fullName>
    <label>is_in_use</label>
    <length>10</length>
    <type>Text</type>
</CustomField>