force-app/main/default/objects/iManage_Workspace__c/fields/last_user__c.field-meta.xml
<CustomField>
    <fullName>last_user__c</fullName>
    <label>last_user</label>
    <length>50</length>
    <type>Text</type>
</CustomField>