force-app/main/default/objects/iManage_Workspace__c/fields/operator__c.field-meta.xml
<CustomField>
    <fullName>operator__c</fullName>
    <label>operator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>