force-app/main/default/objects/iManage_Workspace__c/fields/retain_days__c.field-meta.xml
<CustomField>
    <fullName>retain_days__c</fullName>
    <label>retain_days</label>
    <length>100</length>
    <type>Text</type>
</CustomField>