force-app/main/default/objects/iManage_Workspace__c/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <label>size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>