force-app/main/default/objects/iManage_Workspace__c/fields/subtype__c.field-meta.xml
<CustomField>
    <fullName>subtype__c</fullName>
    <label>subtype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>