force-app/main/default/objects/iManage_Workspace__c/fields/workspace_id__c.field-meta.xml
<CustomField>
    <fullName>workspace_id__c</fullName>
    <label>workspace_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>