force-app/main/default/objects/iManage_Workspace__c/fields/wstype__c.field-meta.xml
<CustomField>
    <fullName>wstype__c</fullName>
    <label>wstype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>