force-app/main/default/objects/iManage_Workspace__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>name__c</columns>
    <columns>id__c</columns>
    <columns>workspace_id__c</columns>
    <columns>custom1__c</columns>
    <columns>custom2__c</columns>
    <columns>custom3__c</columns>
    <columns>custom4__c</columns>
    <columns>description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>